incc/language/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    FOR
    LOOP
    print_stack_5

Grammar

Rule 0     S' -> expression
Rule 1     expression -> ID LPAREN expression_list RPAREN
Rule 2     expression -> ID LPAREN RPAREN
Rule 3     expression -> PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
Rule 4     expression -> PROC LPAREN RPAREN id_list RIGHT_ARROW expression
Rule 5     expression -> PROC LPAREN RPAREN RIGHT_ARROW expression
Rule 6     expression -> error RBRACE
Rule 7     id_list -> ID
Rule 8     id_list -> ID COMMA id_list
Rule 9     expression_list -> expression
Rule 10    expression_list -> expression COMMA expression_list
Rule 11    expression -> WHILE expression DO expression
Rule 12    expression -> IF expression THEN expression
Rule 13    expression -> IF expression THEN expression ELSE expression
Rule 14    expression -> ID
Rule 15    expression -> NUMBER
Rule 16    expression -> expression PLUS expression
Rule 17    expression -> expression MINUS expression
Rule 18    expression -> expression TIMES expression
Rule 19    expression -> expression DIVIDE expression
Rule 20    expression -> ID ASSIGN expression
Rule 21    expression -> LBRACE sequence RBRACE
Rule 22    sequence -> sequence SEMICOLON expression
Rule 23    sequence -> expression
Rule 24    expression -> expression LT expression
Rule 25    expression -> expression GT expression
Rule 26    expression -> expression LE expression
Rule 27    expression -> expression GE expression
Rule 28    expression -> expression EQS expression
Rule 29    expression -> expression NEQS expression

Terminals, with rules where they appear

ASSIGN               : 20
COMMA                : 8 10
DIVIDE               : 19
DO                   : 11
ELSE                 : 13
EQS                  : 28
FOR                  : 
GE                   : 27
GT                   : 25
ID                   : 1 2 7 8 14 20
IF                   : 12 13
LBRACE               : 21
LE                   : 26
LOOP                 : 
LPAREN               : 1 2 3 4 5
LT                   : 24
MINUS                : 17
NEQS                 : 29
NUMBER               : 15
PLUS                 : 16
PROC                 : 3 4 5
RBRACE               : 6 21
RIGHT_ARROW          : 3 4 5
RPAREN               : 1 2 3 4 5
SEMICOLON            : 22
THEN                 : 12 13
TIMES                : 18
WHILE                : 11
error                : 6
print_stack_5        : 

Nonterminals, with rules where they appear

expression           : 3 4 5 9 10 11 11 12 12 13 13 13 16 16 17 17 18 18 19 19 20 22 23 24 24 25 25 26 26 27 27 28 28 29 29 0
expression_list      : 1 10
id_list              : 3 3 4 8
sequence             : 21 22

Parsing method: LALR

state 0

    (0) S' -> . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 1

state 1

    (0) S' -> expression .
    (16) expression -> expression . PLUS expression
    (17) expression -> expression . MINUS expression
    (18) expression -> expression . TIMES expression
    (19) expression -> expression . DIVIDE expression
    (24) expression -> expression . LT expression
    (25) expression -> expression . GT expression
    (26) expression -> expression . LE expression
    (27) expression -> expression . GE expression
    (28) expression -> expression . EQS expression
    (29) expression -> expression . NEQS expression

    PLUS            shift and go to state 9
    MINUS           shift and go to state 10
    TIMES           shift and go to state 11
    DIVIDE          shift and go to state 12
    LT              shift and go to state 13
    GT              shift and go to state 14
    LE              shift and go to state 15
    GE              shift and go to state 16
    EQS             shift and go to state 17
    NEQS            shift and go to state 18


state 2

    (1) expression -> ID . LPAREN expression_list RPAREN
    (2) expression -> ID . LPAREN RPAREN
    (14) expression -> ID .
    (20) expression -> ID . ASSIGN expression

    LPAREN          shift and go to state 19
    PLUS            reduce using rule 14 (expression -> ID .)
    MINUS           reduce using rule 14 (expression -> ID .)
    TIMES           reduce using rule 14 (expression -> ID .)
    DIVIDE          reduce using rule 14 (expression -> ID .)
    LT              reduce using rule 14 (expression -> ID .)
    GT              reduce using rule 14 (expression -> ID .)
    LE              reduce using rule 14 (expression -> ID .)
    GE              reduce using rule 14 (expression -> ID .)
    EQS             reduce using rule 14 (expression -> ID .)
    NEQS            reduce using rule 14 (expression -> ID .)
    $end            reduce using rule 14 (expression -> ID .)
    DO              reduce using rule 14 (expression -> ID .)
    THEN            reduce using rule 14 (expression -> ID .)
    RBRACE          reduce using rule 14 (expression -> ID .)
    SEMICOLON       reduce using rule 14 (expression -> ID .)
    COMMA           reduce using rule 14 (expression -> ID .)
    RPAREN          reduce using rule 14 (expression -> ID .)
    ELSE            reduce using rule 14 (expression -> ID .)
    ASSIGN          shift and go to state 20


state 3

    (3) expression -> PROC . LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> PROC . LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> PROC . LPAREN RPAREN RIGHT_ARROW expression

    LPAREN          shift and go to state 21


state 4

    (6) expression -> error . RBRACE

    RBRACE          shift and go to state 22


state 5

    (11) expression -> WHILE . expression DO expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 23

state 6

    (12) expression -> IF . expression THEN expression
    (13) expression -> IF . expression THEN expression ELSE expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 24

state 7

    (15) expression -> NUMBER .

    PLUS            reduce using rule 15 (expression -> NUMBER .)
    MINUS           reduce using rule 15 (expression -> NUMBER .)
    TIMES           reduce using rule 15 (expression -> NUMBER .)
    DIVIDE          reduce using rule 15 (expression -> NUMBER .)
    LT              reduce using rule 15 (expression -> NUMBER .)
    GT              reduce using rule 15 (expression -> NUMBER .)
    LE              reduce using rule 15 (expression -> NUMBER .)
    GE              reduce using rule 15 (expression -> NUMBER .)
    EQS             reduce using rule 15 (expression -> NUMBER .)
    NEQS            reduce using rule 15 (expression -> NUMBER .)
    $end            reduce using rule 15 (expression -> NUMBER .)
    DO              reduce using rule 15 (expression -> NUMBER .)
    THEN            reduce using rule 15 (expression -> NUMBER .)
    RBRACE          reduce using rule 15 (expression -> NUMBER .)
    SEMICOLON       reduce using rule 15 (expression -> NUMBER .)
    COMMA           reduce using rule 15 (expression -> NUMBER .)
    RPAREN          reduce using rule 15 (expression -> NUMBER .)
    ELSE            reduce using rule 15 (expression -> NUMBER .)


state 8

    (21) expression -> LBRACE . sequence RBRACE
    (22) sequence -> . sequence SEMICOLON expression
    (23) sequence -> . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    sequence                       shift and go to state 25
    expression                     shift and go to state 26

state 9

    (16) expression -> expression PLUS . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 27

state 10

    (17) expression -> expression MINUS . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 28

state 11

    (18) expression -> expression TIMES . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 29

state 12

    (19) expression -> expression DIVIDE . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 30

state 13

    (24) expression -> expression LT . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 31

state 14

    (25) expression -> expression GT . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 32

state 15

    (26) expression -> expression LE . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 33

state 16

    (27) expression -> expression GE . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 34

state 17

    (28) expression -> expression EQS . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 35

state 18

    (29) expression -> expression NEQS . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 36

state 19

    (1) expression -> ID LPAREN . expression_list RPAREN
    (2) expression -> ID LPAREN . RPAREN
    (9) expression_list -> . expression
    (10) expression_list -> . expression COMMA expression_list
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    RPAREN          shift and go to state 38
    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression_list                shift and go to state 37
    expression                     shift and go to state 39

state 20

    (20) expression -> ID ASSIGN . expression
    (1) expression -> . ID LPAREN expression_list RPAREN
    (2) expression -> . ID LPAREN RPAREN
    (3) expression -> . PROC LPAREN id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> . PROC LPAREN RPAREN id_list RIGHT_ARROW expression
    (5) expression -> . PROC LPAREN RPAREN RIGHT_ARROW expression
    (6) expression -> . error RBRACE
    (11) expression -> . WHILE expression DO expression
    (12) expression -> . IF expression THEN expression
    (13) expression -> . IF expression THEN expression ELSE expression
    (14) expression -> . ID
    (15) expression -> . NUMBER
    (16) expression -> . expression PLUS expression
    (17) expression -> . expression MINUS expression
    (18) expression -> . expression TIMES expression
    (19) expression -> . expression DIVIDE expression
    (20) expression -> . ID ASSIGN expression
    (21) expression -> . LBRACE sequence RBRACE
    (24) expression -> . expression LT expression
    (25) expression -> . expression GT expression
    (26) expression -> . expression LE expression
    (27) expression -> . expression GE expression
    (28) expression -> . expression EQS expression
    (29) expression -> . expression NEQS expression

    ID              shift and go to state 2
    PROC            shift and go to state 3
    error           shift and go to state 4
    WHILE           shift and go to state 5
    IF              shift and go to state 6
    NUMBER          shift and go to state 7
    LBRACE          shift and go to state 8

    expression                     shift and go to state 40

state 21

    (3) expression -> PROC LPAREN . id_list RPAREN id_list RIGHT_ARROW expression
    (4) expression -> PROC LPAREN . RPAREN id_list RIGHT_ARROW expression
    (5) expression -> PROC LPAREN . RPAREN RIGHT_ARROW expression
    (7) id_list -> . ID
    (8) id_list -> . ID COMMA id_list

    RPAREN          shift and go to state 42
    ID              shift and go to state 43

    id_list                        shift and go to state 41

state 22

    (6) expression -> error RBRACE .
